dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/variable/var.alg
algoritmo "erro variavel nao existe"

inicio

    escreval(oi)

fimalgoritmo
